# pinvoke-playground

./: LICENSE  README.md  pinvoke-playground.sln
ConsoleApp/: ConsoleApp.csproj  Program.cs
NativeLibrary/: CMakeLists.txt
NativeLibrary/PrimitiveMarshaling/: CMakeLists.txt  calculator.cpp  calculator.h  strings.cpp  strings.h
NativeLibrary/example/: app.cpp
NativeLibrary/greeter/: CMakeLists.txt  greeter.cpp  greeter.h
